# computer_graphics

./: README.md
Template/: CMakeLists.txt  build.bat  vcpkg.json
Template/src/: main.cpp  renderer.cpp  shader.cpp
_1_OpenGL/: OpenGL.md
_1_OpenGL/_1_HelloWindow/: CMakeLists.txt  vcpkg.json
_1_OpenGL/_1_HelloWindow/assets/shaders/: tri.frag  tri.vert
_1_OpenGL/_1_HelloWindow/src/: main.cpp  renderer.cpp  renderer.hpp  shader.hpp
_1_OpenGL/_2_HelloTriangle/: CMakeLists.txt  graphicsPipeline.md  vcpkg.json
_1_OpenGL/_2_HelloTriangle/assets/shaders/: tri.frag  tri.vert
_1_OpenGL/_2_HelloTriangle/src/: main.cpp  renderer.cpp
_1_OpenGL/_3_HelloRectangle/: CMakeLists.txt  vcpkg.json
_1_OpenGL/_3_HelloRectangle/src/: main.cpp  renderer.cpp  renderer.hpp  shader.cpp
